versions/GNDS-v2.0/GNDS/c/src/v2.0/general/Lepton.h


// THIS FILE WAS AUTOGENERATED!
// DO NOT MODIFY!

// Interface for C
// This header file is designed to work with both C and C++
// Function definitions are in this file's .cpp source

// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------
// Instructions for Users
//
// Constructs you're MORE likely to care about are preceded with:
//    // +++ remark
// Constructs you're LESS likely to care about are preceded with:
//    // --- remark
// Anything not marked as above can be ignored by most users.
//
// Lepton is the basic handle type in this file. Example:
//    // Create a default Lepton object:
//    Lepton handle = LeptonDefault();
// Functions involving Lepton are declared throughout this file.
// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------


// -----------------------------------------------------------------------------
// Preliminaries
// -----------------------------------------------------------------------------

#ifndef C_INTERFACE_GNDS_V2_0_GENERAL_LEPTON
#define C_INTERFACE_GNDS_V2_0_GENERAL_LEPTON

#include "GNDStk.h"
#include "v2.0/general/Mass.h"
#include "v2.0/general/Spin.h"
#include "v2.0/general/Parity.h"
#include "v2.0/general/Charge.h"
#include "v2.0/general/Halflife.h"

#ifdef __cplusplus
   #define extern_c extern "C"
#else
   #define extern_c
#endif

// Proxy C struct for the handled C++ class
struct LeptonClass { };


// -----------------------------------------------------------------------------
// Handle types
// -----------------------------------------------------------------------------

// +++ Lepton
// +++ General handle, suitable for most users. If you're not concerned about
// +++ strict "const correctness" in your C code, you can probably use this in
// +++ place of any function parameter of a const-aware handle type.
typedef struct LeptonClass *Lepton;

// --- Const-aware handles.
typedef const struct LeptonClass *const ConstHandle2ConstLepton;
typedef       struct LeptonClass *const ConstHandle2Lepton;
typedef const struct LeptonClass *      Handle2ConstLepton;
typedef       struct LeptonClass *      Handle2Lepton;


// -----------------------------------------------------------------------------
// Basics
// Create, Assign, Delete
// -----------------------------------------------------------------------------

// --- Create, default, const
extern_c Handle2ConstLepton
LeptonDefaultConst();

// +++ Create, default
extern_c Handle2Lepton
LeptonDefault();

// --- Create, general, const
extern_c Handle2ConstLepton
LeptonCreateConst(
   const char *const id,
   const char *const generation,
   ConstHandle2ConstMass mass,
   ConstHandle2ConstSpin spin,
   ConstHandle2ConstParity parity,
   ConstHandle2ConstCharge charge,
   ConstHandle2ConstHalflife halflife
);

// +++ Create, general
extern_c Handle2Lepton
LeptonCreate(
   const char *const id,
   const char *const generation,
   ConstHandle2ConstMass mass,
   ConstHandle2ConstSpin spin,
   ConstHandle2ConstParity parity,
   ConstHandle2ConstCharge charge,
   ConstHandle2ConstHalflife halflife
);

// +++ Assign
// +++ Use this to assign one handled object to another. Don't assign handles,
// +++ as with to = from. That has a meaning that you probably don't intend.
extern_c void
LeptonAssign(ConstHandle2Lepton self, ConstHandle2ConstLepton from);

// +++ Delete
// +++ We'll attempt to remove no-longer-used objects automatically, but you
// +++ may improve performance if you delete them when you're done with them.
extern_c void
LeptonDelete(ConstHandle2ConstLepton self);


// -----------------------------------------------------------------------------
// I/O
// Read, Write, Print
// Each returns 0 if failure, 1 if success.
// -----------------------------------------------------------------------------

// +++ Read from file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll examine the file's contents to determine its type automatically.
extern_c int
LeptonRead(ConstHandle2Lepton self, const char *const filename);

// +++ Write to file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll use filename's extension to determine the type you want written.
extern_c int
LeptonWrite(ConstHandle2ConstLepton self, const char *const filename);

// +++ Print to standard output, in our prettyprinting format
extern_c int
LeptonPrint(ConstHandle2ConstLepton self);

// +++ Print to standard output, as XML
extern_c int
LeptonPrintXML(ConstHandle2ConstLepton self);

// +++ Print to standard output, as JSON
extern_c int
LeptonPrintJSON(ConstHandle2ConstLepton self);


// -----------------------------------------------------------------------------
// Metadatum: id
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
LeptonIdHas(ConstHandle2ConstLepton self);

// +++ Get
// +++ Returns by value
extern_c const char *
LeptonIdGet(ConstHandle2ConstLepton self);

// +++ Set
extern_c void
LeptonIdSet(ConstHandle2Lepton self, const char *const id);


// -----------------------------------------------------------------------------
// Metadatum: generation
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
LeptonGenerationHas(ConstHandle2ConstLepton self);

// +++ Get
// +++ Returns by value
extern_c const char *
LeptonGenerationGet(ConstHandle2ConstLepton self);

// +++ Set
extern_c void
LeptonGenerationSet(ConstHandle2Lepton self, const char *const generation);


// -----------------------------------------------------------------------------
// Child: mass
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
LeptonMassHas(ConstHandle2ConstLepton self);

// --- Get, const
extern_c Handle2ConstMass
LeptonMassGetConst(ConstHandle2ConstLepton self);

// +++ Get
extern_c Handle2Mass
LeptonMassGet(ConstHandle2Lepton self);

// +++ Set
extern_c void
LeptonMassSet(ConstHandle2Lepton self, ConstHandle2ConstMass mass);


// -----------------------------------------------------------------------------
// Child: spin
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
LeptonSpinHas(ConstHandle2ConstLepton self);

// --- Get, const
extern_c Handle2ConstSpin
LeptonSpinGetConst(ConstHandle2ConstLepton self);

// +++ Get
extern_c Handle2Spin
LeptonSpinGet(ConstHandle2Lepton self);

// +++ Set
extern_c void
LeptonSpinSet(ConstHandle2Lepton self, ConstHandle2ConstSpin spin);


// -----------------------------------------------------------------------------
// Child: parity
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
LeptonParityHas(ConstHandle2ConstLepton self);

// --- Get, const
extern_c Handle2ConstParity
LeptonParityGetConst(ConstHandle2ConstLepton self);

// +++ Get
extern_c Handle2Parity
LeptonParityGet(ConstHandle2Lepton self);

// +++ Set
extern_c void
LeptonParitySet(ConstHandle2Lepton self, ConstHandle2ConstParity parity);


// -----------------------------------------------------------------------------
// Child: charge
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
LeptonChargeHas(ConstHandle2ConstLepton self);

// --- Get, const
extern_c Handle2ConstCharge
LeptonChargeGetConst(ConstHandle2ConstLepton self);

// +++ Get
extern_c Handle2Charge
LeptonChargeGet(ConstHandle2Lepton self);

// +++ Set
extern_c void
LeptonChargeSet(ConstHandle2Lepton self, ConstHandle2ConstCharge charge);


// -----------------------------------------------------------------------------
// Child: halflife
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
LeptonHalflifeHas(ConstHandle2ConstLepton self);

// --- Get, const
extern_c Handle2ConstHalflife
LeptonHalflifeGetConst(ConstHandle2ConstLepton self);

// +++ Get
extern_c Handle2Halflife
LeptonHalflifeGet(ConstHandle2Lepton self);

// +++ Set
extern_c void
LeptonHalflifeSet(ConstHandle2Lepton self, ConstHandle2ConstHalflife halflife);


// -----------------------------------------------------------------------------
// Custom functionality
// -----------------------------------------------------------------------------

#include "v2.0/general/Lepton/src/custom.h"

#undef extern_c
#endif